@@ -10,6 +10,7 @@
 * Openpay: Use strict_encode64 [duff]
 * Sage: Always pass along the billing state [duff]
 * VisaNet Peru: New gateway support [shasum]
+* Worldpay: Allow installationId to be specified at transaction time [duff]
 
 
 == Version 1.58.0 (March 1, 2016)
